use train-test split from sklearn

--- a/stanford sentiment.ipynb
+++ b/stanford sentiment.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -31,6 +31,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.metrics import classification_report\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "filename = 'aclImdb_v1.tar.gz'\n",
     "\n",
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -100,27 +101,22 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "train_pos_filenames=10000\n",
-      "train_neg_filenames=10000\n",
-      "valid_pos_filenames=2500\n",
-      "valid_neg_filenames=2500\n",
+      "train_filenames=20000\n",
+      "valid_filenames=5000\n",
       "\n"
      ]
     }
    ],
    "source": [
     "train_num_files = 10000\n",
-    "train_pos_filenames = full_train_pos_filenames[:train_num_files]\n",
-    "train_neg_filenames = full_train_neg_filenames[:train_num_files]\n",
     "\n",
-    "valid_pos_filenames = full_train_pos_filenames[train_num_files:]\n",
-    "valid_neg_filenames = full_train_neg_filenames[train_num_files:]\n",
+    "filenames = full_train_pos_filenames + full_train_neg_filenames\n",
+    "labels = [1.0 for _ in range(len(full_train_pos_filenames))] + [0.0 for _ in range(len(full_train_neg_filenames))]\n",
+    "train_filenames, valid_filenames, train_y, valid_y = train_test_split(filenames, labels, test_size=0.2)\n",
     "\n",
     "print(f\"\"\"\n",
-    "train_pos_filenames={len(train_pos_filenames)}\n",
-    "train_neg_filenames={len(train_neg_filenames)}\n",
-    "valid_pos_filenames={len(valid_pos_filenames)}\n",
-    "valid_neg_filenames={len(valid_neg_filenames)}\n",
+    "train_filenames={len(train_filenames)}\n",
+    "valid_filenames={len(valid_filenames)}\n",
     "\"\"\")"
    ]
   },
@@ -133,41 +129,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def get_content(pos_filenames, neg_filenames):\n",
+    "def get_content(filenames, labels):\n",
     "    texts = []\n",
-    "    labels = [1.0 for _ in range(len(pos_filenames))] + [0.0 for _ in range(len(neg_filenames))]\n",
-    "    for name in pos_filenames:\n",
-    "        with open(f'{full_train_dir}/pos/{name}', 'r') as f:\n",
+    "    for i, name in enumerate(filenames):\n",
+    "        subdir = 'pos' if labels[i] == 1.0 else 'neg'\n",
+    "        with open(f'{full_train_dir}/{subdir}/{name}', 'r') as f:\n",
     "            texts.append(f.read())\n",
     "            \n",
-    "    for name in neg_filenames:\n",
-    "        with open(f'{full_train_dir}/neg/{name}', 'r') as f:\n",
-    "            texts.append(f.read())\n",
-    "            \n",
-    "    return texts, labels"
+    "    return texts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "train_texts, train_y = get_content(train_pos_filenames, train_neg_filenames)\n",
-    "valid_texts, valid_y = get_content(valid_pos_filenames, valid_neg_filenames)"
+    "train_texts = get_content(train_filenames, train_y)\n",
+    "valid_texts = get_content(valid_filenames, valid_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -186,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -198,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -216,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -229,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -267,11 +259,11 @@
       "Grid scores on development set:\n",
       "\n",
       "nan (+/-nan) for {'penalty': 'l1', 'solver': 'lbfgs'}\n",
-      "0.868 (+/-0.014) for {'penalty': 'l1', 'solver': 'liblinear'}\n",
+      "0.868 (+/-0.008) for {'penalty': 'l1', 'solver': 'liblinear'}\n",
       "nan (+/-nan) for {'penalty': 'l1', 'solver': 'sag'}\n",
-      "0.885 (+/-0.013) for {'penalty': 'l2', 'solver': 'lbfgs'}\n",
-      "0.885 (+/-0.013) for {'penalty': 'l2', 'solver': 'liblinear'}\n",
-      "0.885 (+/-0.013) for {'penalty': 'l2', 'solver': 'sag'}\n",
+      "0.883 (+/-0.009) for {'penalty': 'l2', 'solver': 'lbfgs'}\n",
+      "0.883 (+/-0.009) for {'penalty': 'l2', 'solver': 'liblinear'}\n",
+      "0.883 (+/-0.009) for {'penalty': 'l2', 'solver': 'sag'}\n",
       "\n",
       "Detailed classification report:\n",
       "\n",
@@ -280,8 +272,8 @@
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.90      0.88      0.89      2500\n",
-      "         1.0       0.88      0.90      0.89      2500\n",
+      "         0.0       0.89      0.88      0.89      2530\n",
+      "         1.0       0.88      0.89      0.89      2470\n",
       "\n",
       "    accuracy                           0.89      5000\n",
       "   macro avg       0.89      0.89      0.89      5000\n",
@@ -317,11 +309,11 @@
       "Grid scores on development set:\n",
       "\n",
       "nan (+/-nan) for {'penalty': 'l1', 'solver': 'lbfgs'}\n",
-      "0.868 (+/-0.014) for {'penalty': 'l1', 'solver': 'liblinear'}\n",
+      "0.868 (+/-0.008) for {'penalty': 'l1', 'solver': 'liblinear'}\n",
       "nan (+/-nan) for {'penalty': 'l1', 'solver': 'sag'}\n",
-      "0.884 (+/-0.013) for {'penalty': 'l2', 'solver': 'lbfgs'}\n",
-      "0.884 (+/-0.013) for {'penalty': 'l2', 'solver': 'liblinear'}\n",
-      "0.884 (+/-0.013) for {'penalty': 'l2', 'solver': 'sag'}\n",
+      "0.882 (+/-0.009) for {'penalty': 'l2', 'solver': 'lbfgs'}\n",
+      "0.882 (+/-0.009) for {'penalty': 'l2', 'solver': 'liblinear'}\n",
+      "0.882 (+/-0.009) for {'penalty': 'l2', 'solver': 'sag'}\n",
       "\n",
       "Detailed classification report:\n",
       "\n",
@@ -330,8 +322,8 @@
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.90      0.88      0.89      2500\n",
-      "         1.0       0.88      0.90      0.89      2500\n",
+      "         0.0       0.89      0.88      0.89      2530\n",
+      "         1.0       0.88      0.89      0.89      2470\n",
       "\n",
       "    accuracy                           0.89      5000\n",
       "   macro avg       0.89      0.89      0.89      5000\n",
@@ -378,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -389,8 +381,8 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.94      0.93      0.93     10000\n",
-      "         1.0       0.93      0.94      0.93     10000\n",
+      "         0.0       0.94      0.93      0.93      9970\n",
+      "         1.0       0.93      0.94      0.94     10030\n",
       "\n",
       "    accuracy                           0.93     20000\n",
       "   macro avg       0.93      0.93      0.93     20000\n",
@@ -413,6 +405,17 @@
     "1. Even with simple logistic regression, we are already overfitting into the model. More sophisticated model with current dataset is likely to overfit even further (MLP, tree based models)\n",
     "2. Having more data likely to help us generalize better\n",
     "3. We should try out better regularization (we have used L2 above)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next Steps\n",
+    "\n",
+    "Some ideas around improving the performance of the model:\n",
+    "1. Simplify our features, right now tf-idf seems to have too many features\n",
+    "2. Can we improve classification accuracy?"
    ]
   },
   {
