--- a/stanford sentiment.ipynb
+++ b/stanford sentiment.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -22,16 +22,19 @@
    "source": [
     "# data can be found in https://ai.stanford.edu/~amaas/data/sentiment/\n",
     "import urllib.request\n",
+    "from time import time\n",
     "import os\n",
     "from os import listdir\n",
     "from os.path import isfile, join\n",
     "import nltk\n",
     "from nltk import word_tokenize\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.pipeline import Pipeline\n",
     "\n",
     "filename = 'aclImdb_v1.tar.gz'\n",
     "\n",
@@ -208,20 +211,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pipeline = Pipeline([\n",
+    "    ('vect', CountVectorizer()),\n",
+    "    ('tfidf', TfidfTransformer()),\n",
+    "    ('clf', LogisticRegression()),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Set the parameters by cross-validation\n",
-    "tuned_parameters = [{'solver': ['lbfgs', 'liblinear', 'sag'],\n",
-    "                     'penalty': ['l1', 'l2']}]"
+    "parameters = {\n",
+    "    'vect__max_df': (0.25, 0.5),\n",
+    "    'vect__max_features': (None, 50000),\n",
+    "    'vect__ngram_range': ((1, 2),),  # unigrams or bigrams\n",
+    "    'tfidf__norm': ('l2',),\n",
+    "    'clf__max_iter': (20,),\n",
+    "    'clf__penalty': ('l2',),\n",
+    "    'clf__max_iter': (50,),\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false
    },
@@ -230,171 +254,96 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# Tuning hyper-parameters for precision\n",
-      "\n"
+      "Performing grid search...\n",
+      "pipeline: ['vect', 'tfidf', 'clf']\n",
+      "parameters:\n",
+      "{'vect__max_df': (0.5, 0.75, 1.0), 'vect__max_features': (None, 5000, 10000, 50000), 'vect__ngram_range': ((1, 1), (1, 2)), 'tfidf__norm': ('l2',), 'clf__max_iter': (50, 100), 'clf__penalty': ('l2',)}\n",
+      "Fitting 5 folds for each of 48 candidates, totalling 240 fits\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/lkhamsurenl/Library/Python/3.7/lib/python/site-packages/sklearn/model_selection/_validation.py:536: FitFailedWarning: Estimator fit failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
-      "ValueError: Solver lbfgs supports only 'l2' or 'none' penalties, got l1 penalty.\n",
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:  5.5min\n",
+      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed: 23.2min\n",
+      "[Parallel(n_jobs=-1)]: Done 240 out of 240 | elapsed: 28.1min finished\n",
+      "/Users/lkhamsurenl/Library/Python/3.7/lib/python/site-packages/sklearn/linear_model/_logistic.py:940: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
       "\n",
-      "  FitFailedWarning)\n",
-      "/Users/lkhamsurenl/Library/Python/3.7/lib/python/site-packages/sklearn/model_selection/_validation.py:536: FitFailedWarning: Estimator fit failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
-      "ValueError: Solver sag supports only 'l2' or 'none' penalties, got l1 penalty.\n",
-      "\n",
-      "  FitFailedWarning)\n"
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best parameters set found on development set:\n",
+      "done in 1704.964s\n",
       "\n",
-      "{'penalty': 'l2', 'solver': 'lbfgs'}\n",
-      "\n",
-      "Grid scores on development set:\n",
-      "\n",
-      "nan (+/-nan) for {'penalty': 'l1', 'solver': 'lbfgs'}\n",
-      "0.868 (+/-0.008) for {'penalty': 'l1', 'solver': 'liblinear'}\n",
-      "nan (+/-nan) for {'penalty': 'l1', 'solver': 'sag'}\n",
-      "0.883 (+/-0.009) for {'penalty': 'l2', 'solver': 'lbfgs'}\n",
-      "0.883 (+/-0.009) for {'penalty': 'l2', 'solver': 'liblinear'}\n",
-      "0.883 (+/-0.009) for {'penalty': 'l2', 'solver': 'sag'}\n",
-      "\n",
-      "Detailed classification report:\n",
-      "\n",
-      "The model is trained on the full development set.\n",
-      "The scores are computed on the full evaluation set.\n",
-      "\n",
+      "Best score: 0.892\n",
+      "Best parameters set:\n",
+      "\tclf__max_iter: 50\n",
+      "\tclf__penalty: 'l2'\n",
+      "\ttfidf__norm: 'l2'\n",
+      "\tvect__max_df: 0.5\n",
+      "\tvect__max_features: 50000\n",
+      "\tvect__ngram_range: (1, 2)\n",
+      "Validation report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.89      0.88      0.89      2530\n",
-      "         1.0       0.88      0.89      0.89      2470\n",
+      "         0.0       0.95      0.94      0.95      9970\n",
+      "         1.0       0.94      0.96      0.95     10030\n",
       "\n",
-      "    accuracy                           0.89      5000\n",
-      "   macro avg       0.89      0.89      0.89      5000\n",
-      "weighted avg       0.89      0.89      0.89      5000\n",
+      "    accuracy                           0.95     20000\n",
+      "   macro avg       0.95      0.95      0.95     20000\n",
+      "weighted avg       0.95      0.95      0.95     20000\n",
       "\n",
-      "\n",
-      "# Tuning hyper-parameters for recall\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/lkhamsurenl/Library/Python/3.7/lib/python/site-packages/sklearn/model_selection/_validation.py:536: FitFailedWarning: Estimator fit failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
-      "ValueError: Solver lbfgs supports only 'l2' or 'none' penalties, got l1 penalty.\n",
-      "\n",
-      "  FitFailedWarning)\n",
-      "/Users/lkhamsurenl/Library/Python/3.7/lib/python/site-packages/sklearn/model_selection/_validation.py:536: FitFailedWarning: Estimator fit failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
-      "ValueError: Solver sag supports only 'l2' or 'none' penalties, got l1 penalty.\n",
-      "\n",
-      "  FitFailedWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best parameters set found on development set:\n",
-      "\n",
-      "{'penalty': 'l2', 'solver': 'lbfgs'}\n",
-      "\n",
-      "Grid scores on development set:\n",
-      "\n",
-      "nan (+/-nan) for {'penalty': 'l1', 'solver': 'lbfgs'}\n",
-      "0.868 (+/-0.008) for {'penalty': 'l1', 'solver': 'liblinear'}\n",
-      "nan (+/-nan) for {'penalty': 'l1', 'solver': 'sag'}\n",
-      "0.882 (+/-0.009) for {'penalty': 'l2', 'solver': 'lbfgs'}\n",
-      "0.882 (+/-0.009) for {'penalty': 'l2', 'solver': 'liblinear'}\n",
-      "0.882 (+/-0.009) for {'penalty': 'l2', 'solver': 'sag'}\n",
-      "\n",
-      "Detailed classification report:\n",
-      "\n",
-      "The model is trained on the full development set.\n",
-      "The scores are computed on the full evaluation set.\n",
-      "\n",
+      "Validation report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.89      0.88      0.89      2530\n",
-      "         1.0       0.88      0.89      0.89      2470\n",
+      "         0.0       0.90      0.89      0.90      2530\n",
+      "         1.0       0.89      0.90      0.90      2470\n",
       "\n",
-      "    accuracy                           0.89      5000\n",
-      "   macro avg       0.89      0.89      0.89      5000\n",
-      "weighted avg       0.89      0.89      0.89      5000\n",
-      "\n",
+      "    accuracy                           0.90      5000\n",
+      "   macro avg       0.90      0.90      0.90      5000\n",
+      "weighted avg       0.90      0.90      0.90      5000\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "scores = ['precision', 'recall']\n",
+    "# find the best parameters for both the feature extraction and the\n",
+    "# classifier\n",
+    "grid_search = GridSearchCV(pipeline, parameters, n_jobs=-1, verbose=1)\n",
     "\n",
-    "for score in scores:\n",
-    "    print(\"# Tuning hyper-parameters for %s\" % score)\n",
-    "    print()\n",
+    "print(\"Performing grid search...\")\n",
+    "print(\"pipeline:\", [name for name, _ in pipeline.steps])\n",
+    "print(\"parameters:\")\n",
+    "print(parameters)\n",
+    "t0 = time()\n",
+    "grid_search.fit(train_texts, train_y)\n",
+    "print(\"done in %0.3fs\" % (time() - t0))\n",
+    "print()\n",
     "\n",
-    "    clf = GridSearchCV(\n",
-    "        LogisticRegression(), tuned_parameters, scoring='%s_macro' % score\n",
-    "    )\n",
-    "    clf.fit(X, train_y)\n",
+    "print(\"Best score: %0.3f\" % grid_search.best_score_)\n",
+    "print(\"Best parameters set:\")\n",
+    "best_parameters = grid_search.best_estimator_.get_params()\n",
+    "for param_name in sorted(parameters.keys()):\n",
+    "    print(\"\\t%s: %r\" % (param_name, best_parameters[param_name]))\n",
+    "    \n",
+    "train_y, train_preds = train_y, grid_search.predict(train_texts)\n",
+    "print('Validation report:')\n",
+    "print(classification_report(train_y, train_preds))\n",
     "\n",
-    "    print(\"Best parameters set found on development set:\")\n",
-    "    print()\n",
-    "    print(clf.best_params_)\n",
-    "    print()\n",
-    "    print(\"Grid scores on development set:\")\n",
-    "    print()\n",
-    "    means = clf.cv_results_['mean_test_score']\n",
-    "    stds = clf.cv_results_['std_test_score']\n",
-    "    for mean, std, params in zip(means, stds, clf.cv_results_['params']):\n",
-    "        print(\"%0.3f (+/-%0.03f) for %r\"\n",
-    "              % (mean, std * 2, params))\n",
-    "    print()\n",
     "\n",
-    "    print(\"Detailed classification report:\")\n",
-    "    print()\n",
-    "    print(\"The model is trained on the full development set.\")\n",
-    "    print(\"The scores are computed on the full evaluation set.\")\n",
-    "    print()\n",
-    "    valid_y, valid_preds = valid_y, clf.predict(valid_X)\n",
-    "    print(classification_report(valid_y, valid_preds))\n",
-    "    print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0       0.94      0.93      0.93      9970\n",
-      "         1.0       0.93      0.94      0.94     10030\n",
-      "\n",
-      "    accuracy                           0.93     20000\n",
-      "   macro avg       0.93      0.93      0.93     20000\n",
-      "weighted avg       0.93      0.93      0.93     20000\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# How is the performance of the best model on training?\n",
-    "train_y, train_preds = train_y, clf.predict(X)\n",
-    "print(classification_report(train_y, train_preds))"
+    "valid_y, valid_preds = valid_y, grid_search.predict(valid_texts)\n",
+    "print('Training report:')\n",
+    "print(classification_report(valid_y, valid_preds))\n"
    ]
   },
   {
@@ -417,6 +366,15 @@
     "1. Simplify our features, right now tf-idf seems to have too many features\n",
     "2. Can we improve classification accuracy?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
